--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -20,7 +20,7 @@
     font-family: zedya;
     font-size: 15px;
     color: rgb(255, 255, 255);
-    background-color: #25BEFF;
+    background-color: #dfc118;
     font-weight: 700;
     font-style: italic;
     
@@ -50,7 +50,7 @@
     font-size: 50px;
     margin-right: 20px;
     align-self: top;
-    color: #25BEFF;
+    color: #dfc118;
 }
 
 
@@ -60,7 +60,7 @@
 }
 
 .contact-text h3{
-    color: #25BEFF;
+    color: #dfc118;
 }
 
 
@@ -73,7 +73,7 @@
 }
 .title-icon {
     font-size: 80px;
-    color: #25BEFF;
+    color: #dfc118;
     margin-right: 10px;
 
 }
@@ -104,7 +104,7 @@
     color: #2e282a;
 }
 #team .title-text{
-    border-left: 3px solid #00a7e1;
+    border-left: 3px solid #dfc118;
 }
 .team-member{
     text-align: center;
@@ -116,7 +116,7 @@
 }
 
 .team-member:hover{
-    background: #00a7e1;
+    background: #dfc118;
 }
 
 .team-member img{
@@ -144,7 +144,7 @@
 .team-member hr {
     margin: 70%;
     margin: 0 auto;
-    border: 1px solid #ffc914;
+    border: 1px solid #dfc118;
 }
 
 .team-member p {
@@ -197,7 +197,7 @@
 }
 
 .contact-form:hover{
-    background: #00a7e1;
+    background: #dfc118;
     transition: background 2s ease;
 }
 
@@ -208,7 +208,7 @@
 }
 .contact-form h3{
     width: 100%;
-    background: #25BEFF;
+    background: #dfc118;
     color: #f5f3f5;
     text-align: center;
     text-transform: capitalize;
@@ -228,7 +228,7 @@ form input{
     padding: 5px 0 !important;
     border:none;
     font-size: 20px;
-    border-bottom: 5px solid #25BEFF;
+    border-bottom: 5px solid #dfc118;
     background: transparent;
 }
 form textarea{
@@ -236,7 +236,7 @@ form textarea{
     padding: 5px 0 !important;
     border:none;
     font-size: 20px;
-    border-bottom: 5px solid #25BEFF;
+    border-bottom: 5px solid #dfc118;
     background: transparent;
     height: 150px;
 }
@@ -245,7 +245,7 @@ form textarea{
 form button{
     font-size: 25px;
     margin: 10px 0;
-    background: #25BEFF;
+    background: #dfc118;
     border-radius: 20px;
     padding: 5px 0;
     color: #f5f3f5;
@@ -257,7 +257,7 @@ form button{
 #AboutButtons button{
     font-size: 25px;
     margin: 10px 0;
-    background: #25BEFF;
+    background: #dfc118;
     border-radius: 10px;
     padding: 10px 0;
     color: #f5f3f5;
@@ -266,7 +266,7 @@ form button{
 }
 
 #AboutButtons button:hover{
-    background: #6591e2;
+    background: #dfc118;
     transition: background 1s ease;
 }
 @media screen and (min-width:586px) {
@@ -345,7 +345,15 @@ form button{
     line-height: 2;
     margin: 10px;
 }
-
+/*
+.description {
+    float:right;
+    
+}
+.imageAbt {
+    float:left;
+    
+}*/
 
 
 
